// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should inform if the actual value is less than 1% of the target value 1`] = `
<div>
  <span
    className="text"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Target duration: <b>10000ms</b><br/>Average duration: <b>1ms</b><br/>< 1% of the target value",
      }
    }
  />
  <ForwardRef(Button)
    onClick={[Function]}
  >
    <Icon
      type="save"
    />
    Instance IDs
  </ForwardRef(Button)>
</div>
`;

exports[`should show a tooltip with information about actual and target value 1`] = `
<div>
  <span
    className="text"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Target duration: <b>1ms</b><br/>Average duration: <b>2ms</b><br/>200% of the target value",
      }
    }
  />
  <ForwardRef(Button)
    onClick={[Function]}
  >
    <Icon
      type="save"
    />
    Instance IDs
  </ForwardRef(Button)>
</div>
`;

exports[`should show a tooltip with information if no actual value is available 1`] = `
<div>
  <span
    className="text"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Target duration: <b>1ms</b><br/>No actual value available.<br/>Cannot compare target and actual value.",
      }
    }
  />
  <ForwardRef(Button)
    onClick={[Function]}
  >
    <Icon
      type="save"
    />
    Instance IDs
  </ForwardRef(Button)>
</div>
`;
